# cozoc

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  .spacemacs  CMakeLists.txt  README.md  Vagrantfile  env.sh  init.el  makefile  netcdf4.bash  playbook.yml  setup.sh
attic/: arrays.c  arrays.h  bootstrap.sh  config.h.in  init.el  solve.c  solve.h  utils.c  vecops.c  vorticity.c  wrfnc.c  wrfnc.h
attic/src/: makefile
cmake/Functions/: ide_support.cmake  netcdf.cmake
cmake/Modules/: AlwaysRPATH.cmake  FindNETCDF.cmake  FindPETSC.cmake
make-includes/: constants.makefile  findnetcdf.makefile  findpetsc.makefile  netcdf.makefile
src/: CMakeLists.txt  abortonerror.h  arrays.c  arrays.h  config.h.in  constants.c  constants.h  context.c  context.h  coriolis_parameter.c  coriolis_parameter.h  cozoc.c  daslice.c  daslice.h  defs.h  derivatives.c  derivatives.h  equation.c  equation.h  field.c  field.h  fields.c  fields.h  grids.h  idtest.c  idtest.h  io.c  io.h  loops.h  makefile  omega.c  omega.h  omegaQG.c  omegaQG.h  omega_stencil.inc  omega_stencil.py  operators.h  ops.c  ops.h  options.c  (+16 more)
test/: CMakeLists.txt  CTestCustom.cmake  generate-input.bash  generate-test-input-wrf.bash  prepare-tests.make.in  test-input-wrf.bash  wrf.template
test/wrf_simulated/: CMakeLists.txt  prepare-tests.make.in
